[package]
name = "hedge"
version = "0.3.0"
authors = ["Chip Collier <photex@gmail.com>"]
description = "An index based half-edge mesh implementation."
keywords = ["halfedge", "half-edge", "mesh", "graphics", "meshes"]
categories = ["data-structures", "graphics"]
license = "MPL-2.0"
documentation = "https://docs.rs/hedge"
homepage = "https://github.com/photex/hedge"
repository = "https://github.com/photex/hedge"
readme = "README.md"
edition = "2021"

[dependencies]
log = "0.4"

[dev-dependencies]
env_logger = "0.9"
